--- a/libs/openFrameworksCompiled/project/vs/openFrameworksCommon.props
+++ b/libs/openFrameworksCompiled/project/vs/openFrameworksCommon.props
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ImportGroup Label="PropertySheets" />
+  <ImportGroup Label="PropertySheets">
+    <Import Project="of-vk.props" />
+  </ImportGroup>
   <PropertyGroup Label="UserMacros">
     <OF_ROOT>$(MSBuildThisFileDirectory)\..\..\..\..\</OF_ROOT>
   </PropertyGroup>
@@ -8,7 +10,7 @@
   <ItemDefinitionGroup>
     <Link>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;wldap32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Program Files (x86)\Visual Leak Detector\lib\Win64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
