implement storageBuffer attachment
+ for compute shader
+ for draw shader

Shader parses ssbos already, now drawCommand and computeCommand also
have a way to resolve such attachments when they create vulkan command
buffer instructions.

ShaderStorageBuffers (SSBO)s need to be set from memory buffer regions,
i.e. pre-allocated memory. You may use the buffer allocator to allocate
this memory.

--- a/libs/openFrameworksCompiled/project/vs/openframeworksLib.vcxproj
+++ b/libs/openFrameworksCompiled/project/vs/openframeworksLib.vcxproj
@@ -108,6 +108,7 @@
       <WarningLevel>Level3</WarningLevel>
       <BrowseInformation>false</BrowseInformation>
       <CompileAs>CompileAsCpp</CompileAs>
+      <DisableSpecificWarnings>4996; 4267</DisableSpecificWarnings>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -212,6 +213,7 @@
     <ClInclude Include="..\..\..\openFrameworks\events\ofEventUtils.h" />
     <ClInclude Include="..\..\..\openFrameworks\vk\Allocator.h" />
     <ClInclude Include="..\..\..\openFrameworks\vk\BufferAllocator.h" />
+    <ClInclude Include="..\..\..\openFrameworks\vk\ComputeCommand.h" />
     <ClInclude Include="..\..\..\openFrameworks\vk\DrawCommand.h" />
     <ClInclude Include="..\..\..\openFrameworks\vk\HelperTypes.h" />
     <ClInclude Include="..\..\..\openFrameworks\vk\ImageAllocator.h" />
@@ -296,6 +298,7 @@
     <ClCompile Include="..\..\..\openFrameworks\communication\ofArduino.cpp" />
     <ClCompile Include="..\..\..\openFrameworks\communication\ofSerial.cpp" />
     <ClCompile Include="..\..\..\openFrameworks\vk\BufferAllocator.cpp" />
+    <ClCompile Include="..\..\..\openFrameworks\vk\ComputeCommand.cpp" />
     <ClCompile Include="..\..\..\openFrameworks\vk\DrawCommand.cpp" />
     <ClCompile Include="..\..\..\openFrameworks\vk\ImageAllocator.cpp" />
     <ClCompile Include="..\..\..\openFrameworks\vk\ofVkRenderer.cpp" />
