update vulkan lib location as of vk sdk >= 1.0.46.0

--- a/libs/openFrameworksCompiled/project/vs/of-vk.props
+++ b/libs/openFrameworksCompiled/project/vs/of-vk.props
@@ -8,7 +8,7 @@
       <AdditionalIncludeDirectories>$(VK_SDK_PATH)\Include;$(OF_ROOT)\libs\openFrameworks\vk;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>$(VK_SDK_PATH)\Bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(VK_SDK_PATH)\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
